--- a/apps/lianjademo/app.config
+++ b/apps/lianjademo/app.config
@@ -7,6 +7,6 @@
 "backcolor" 		: "black",
 "caption" 		: "lianjademo test",
 "icon"			: "data:{base64_encode('lib:/icons/document.png')}",
-"date"			: "{timestamp}",
-"appid" 		: "{guid}"
+"date"			: "{timestamp()}",
+"appid" 		: "{guid()}"
 }
