--- a/apps/lianjademo/app.config
+++ b/apps/lianjademo/app.config
@@ -6,7 +6,7 @@
 "size"			: "2x1",
 "backcolor" 		: "black",
 "caption" 		: "lianjademo test",
-"icon"			: "data:image/png;base64, {base64_encode('lib:/icons/document.png')}",
+"icon"			: "lib:/icons/document.png'",
 "date"			: "{timestamp()}",
 "appid" 		: "{guid()}"
 }
