--- a/apps/lianjademo/app.config
+++ b/apps/lianjademo/app.config
@@ -2,6 +2,7 @@
 "name" 		: "lianjademo",
 "category"		: "Examples",
 "author" 		: "Lianja Inc",
+"description"	: "This is a test",
 "version"		: "1.0",
 "size"			: "2x1",
 "backcolor" 		: "black",
