--- a/apps/lianjademo/app.config
+++ b/apps/lianjademo/app.config
@@ -8,6 +8,6 @@
 "backcolor" 		: "black",
 "caption" 		: "lianjademo test",
 "icon"			: "lib:/icons/document.png'",
-"date"			: "{timestamp()}",
+"lastmodified"		: "{timestamp()}",
 "appid" 		: "{guid()}"
 }
