--- a/apps/lianjademo/app.config
+++ b/apps/lianjademo/app.config
@@ -7,7 +7,7 @@
 "size"			: "2x1",
 "backcolor" 		: "black",
 "caption" 		: "lianjademo test",
-"icon"			: "lib:/icons/document.png'",
+"icon"			: "lib:/icons/document.png",
 "lastmodified"		: "{timestamp()}",
 "appid" 		: "{guid()}"
 }
