--- a/apps/lianjarepotest/app.config
+++ b/apps/lianjarepotest/app.config
@@ -1,12 +1,12 @@
 {
-"name" 		: "lianjademo",
+"name" 		: "lianjarepotest",
 "category"		: "Examples",
 "author" 		: "Lianja Inc",
 "description"	: "This is a test",
 "version"		: "1.0",
 "size"			: "2x1",
 "backcolor" 		: "black",
-"caption" 		: "lianjademo test",
+"caption" 		: "lianjarepotest",
 "icon"			: "lib:/icons/document.png",
 "lastmodified"		: "{timestamp()}",
 "appid" 		: "{guid()}"
