--- a/apps/lianjarepotest/app.config
+++ b/apps/lianjarepotest/app.config
@@ -2,12 +2,10 @@
 "name" 		: "lianjarepotest",
 "category"		: "Examples",
 "author" 		: "Lianja Inc",
-"description"	: "This is a test",
+"description"	: "This is a simple example of a Lianja App from the repo.",
 "version"		: "1.0",
 "size"			: "2x1",
-"backcolor" 		: "black",
+"backcolor" 		: "white",
 "caption" 		: "lianjarepotest",
-"icon"			: "lib:/icons/document.png",
-"lastmodified"		: "{timestamp()}",
-"appid" 		: "{guid()}"
+"icon"			: "lib:/images/lianja512.png",
 }
