--- a/apps/lianjarepotest/app.config
+++ b/apps/lianjarepotest/app.config
@@ -8,4 +8,6 @@
 "backcolor" 		: "white",
 "caption" 		: "lianjarepotest",
 "icon"			: "lib:/images/lianja512.png",
+"lastmodified"		: "{timestamp()}",
+"appid" 		: "{guid()}"
 }
