--- a/apps/lianjarepotest/app.config
+++ b/apps/lianjarepotest/app.config
@@ -7,7 +7,7 @@
 "size"			: "2x1",
 "backcolor" 		: "white",
 "caption" 		: "lianjarepotest",
-"icon"			: "lib:/images/lianja512.png",
+"icon"			: "lib:/images/rstep1.png",
 "lastmodified"		: "{timestamp()}",
 "appid" 		: "{guid()}"
 }
