--- a/apps/lianjarepotest/app.config
+++ b/apps/lianjarepotest/app.config
@@ -1,13 +1,12 @@
 {
 "name" 		: "lianjarepotest",
-"category"		: "Examples",
-"author" 		: "Lianja Inc",
-"description"	: "This is a simple example of a Lianja App from the repo.",
+"category"		: "Start Apps",
+"author" 		: "LianjaDev",
+"description"	: "This is a simple example App.",
 "version"		: "1.0",
-"size"			: "2x1",
+"size"			: "3x1",
 "backcolor" 		: "white",
 "caption" 		: "lianjarepotest",
 "icon"			: "lib:/images/rstep1.png",
-"lastmodified"		: "{timestamp()}",
 "appid" 		: "{guid()}"
 }
