--- a/apps/lianjarepotest/app.config
+++ b/apps/lianjarepotest/app.config
@@ -1,6 +1,6 @@
 {
 "name" 		: "lianjarepotest",
-"category"		: "Start Apps",
+"category"		: "Starter Apps",
 "author" 		: "LianjaDev",
 "description"	: "This is a simple example App.",
 "version"		: "1.0",
