--- a/apps/lianjarepotest/app.config
+++ b/apps/lianjarepotest/app.config
@@ -1,12 +1,8 @@
 {
-"name" 		: "lianjarepotest",
+"name" 			: "lianjarepotest",
 "category"		: "Starter Apps",
 "author" 		: "LianjaDev",
 "description"	: "This is a simple example App.",
 "version"		: "1.0",
-"size"			: "3x1",
-"backcolor" 		: "white",
-"caption" 		: "lianjarepotest",
-"icon"			: "lib:/images/rstep1.png",
-"appid" 		: "{guid()}"
+"caption" 		: "Lianja Test App v1.0",
 }
