--- a/apps/lianjarepotest/app.json
+++ b/apps/lianjarepotest/app.json
@@ -4,5 +4,5 @@
 "author" 		: "LianjaDev",
 "description"	: "This is a simple example App.",
 "version"		: "1.0",
-"caption" 		: "Lianja Test App v1.0",
+"caption" 		: "Lianja Test App v1.0"
 }
