--- a/apps/lianjarepotest/app.json
+++ b/apps/lianjarepotest/app.json
@@ -2,7 +2,7 @@
 "name" 		: "lianjarepotest",
 "category"		: "Starter Apps",
 "author" 		: "LianjaDev",
-"description"	: "<b>Whats new</b><br>This is a simple example App description.",
+"description"	: "What's<br>This is a simple example App description.",
 "version"		: "1.0",
 "caption" 		: "Lianja Test App v1.0"
 }
