--- a/apps/barrytest/app.json
+++ b/apps/barrytest/app.json
@@ -3,7 +3,7 @@
 "category"		: "Testing",
 "author" 		    : "LianjaDev",
 "description"	    : "",
-"version"		    : "",
+"version"		    : "1.0",
 "caption" 		: "This is the caption",
 "subcaption"	    : "This is a sub-caption",
 "roles"			: "*",
